# TextToEpub

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml
argument/: CMakeLists.txt  argument.cpp  argument.h
bili_2.4/: config.json  src.py
cmake/: json.cmake  xml.cmake
src/: CMakeLists.txt  main.cpp
src/util/: Book.cpp  Book.h  Context.cpp  Context.h  outline.h  util.cpp  util.h  uuid.cpp  uuid.h
template/: chapter.xhtml  cover.xhtml  illustration.xhtml  new book.json  new container.xml  package.opf  template.json  template.xml  toc.xhtml
template/Styles/: style.css
test/: CMakeLists.txt  book.cpp  test.cpp  test.h  testArgument.cpp  testBook.cpp  testUtil.cpp
util/: Annotate.cpp  Annotate.h  Book.cpp  Book.h  Context.cpp  Context.h  Line.cpp  Line.h  outline.h  util.cpp  util.h  uuid.h
